AUTOMAKE_OPTIONS = subdir-objects

bin_PROGRAMS = abgx360gui
abgx360gui_SOURCES = \
src/abgx360gui.cpp \
src/abgx360gui.h \
src/abgx360gui.ico \
src/abgx360guiApp.cpp \
src/abgx360guiApp.h \
src/abgx360guiApp.rc \
src/Images/abgx360gui_DonateButton_XPM.xpm \
src/Images/abgx360gui_dottedOpenButtonDisabled_XPM.xpm \
src/Images/abgx360gui_ExtractDMISaveButton_XPM.xpm \
src/Images/abgx360gui_ExtractPFISaveButton_XPM.xpm \
src/Images/abgx360gui_ExtractSSSaveButton_XPM.xpm \
src/Images/abgx360gui_ExtractVideoSaveButton_XPM.xpm \
src/Images/abgx360gui_ID_MNU_GOTOABGX360_NET_1869_XPM.xpm \
src/Images/abgx360gui_ID_MNU_MAKEADONATION_1868_XPM.xpm \
src/Images/abgx360gui_ID_MNU_OPENINPUTFILE_1748_XPM.xpm \
src/Images/abgx360gui_OpenButton_XPM.xpm \
src/Images/abgx360gui_PatchDMIOpenButton_XPM.xpm \
src/Images/abgx360gui_PatchPFIOpenButton_XPM.xpm \
src/Images/abgx360gui_PatchSSOpenButton_XPM.xpm \
src/Images/abgx360gui_PatchVideoOpenButton_XPM.xpm \
src/Images/abgx360gui_SaveButtonDisabled_XPM.xpm \
src/Images/abgx360gui_SaveButton_XPM.xpm \
src/Images/abgx360gui_TopBitmap_XPM.xpm \
src/Images/InfoTip_XPM.xpm \
src/Images/LaunchClick.xpm \
src/Images/LaunchNormal.xpm \
src/Images/LaunchOver.xpm \
src/Images/Self_abgx360gui_XPM.xpm
abgx360gui_CFLAGS = @CFLAGS@
abgx360gui_CPPFLAGS = @CPPFLAGS@
abgx360gui_CXXFLAGS = @CXXFLAGS@
abgx360gui_LIBS = @LIBS@
